# renameutils

./: AUTHORS  ChangeLog  MANIFEST.sources  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  renameutils.spec.in
debian/: changelog  control  copyright
gnulib-lib/: Makefile.am  Makefile.in
gnulib-m4/: gnulib-cache.m4  gnulib-comp.m4
gnulib-po/: Makevars  POTFILES.in  af.gmo  af.po  be.gmo  be.po  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  es.gmo  es.po  et.gmo  et.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  gl.po  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  (+35 more)
lib/: Makefile.am  Makefile.in  memset.c  strings.in.h
m4/: gnulib-comp.m4  gnulib.m4  ol_lib_readline.m4
po/: LINGUAS  POTFILES.in  fr.gmo  fr.po  renameutils.pot  sv.gmo  sv.po
src/: Makefile.am  Makefile.in  apply.c  deurlname.1  deurlname.c  display.c  edit.c  icmd.1  icmd.c  icp.1  icp.c  imv.1  imv.c  interactive.c  list.c  plan.c  qcmd.1  qcmd.c  qcmd.h  quote.c  variables.c
src/common/: Makefile.am  Makefile.in  common.h  comparison.h  error.c  error.h  hmap.c  hmap.h  intutil.c  intutil.h  io-utils.c  io-utils.h  llist.c  llist.h  strbuf.c  strbuf.h  string-utils.c  string-utils.h  tab-utils.c  tab-utils.h  tmap.c  tmap.h
src/editformats/: Makefile.am  Makefile.in  destination-only.c  dual-column.c  single-column.c
