AM_CPPFLAGS = \
	-I$(top_srcdir)/gnulib-lib \
	-I$(top_builddir)/gnulib-lib
AM_CFLAGS = -Wall

noinst_LIBRARIES = lib_common.a

lib_common_a_SOURCES = \
	comparison.h \
	common.h \
	error.c \
	error.h \
	hmap.c \
	hmap.h \
	io-utils.c \
	io-utils.h \
	intutil.c \
	intutil.h \
	llist.c \
	llist.h \
	strbuf.c \
	strbuf.h \
	string-utils.c \
	string-utils.h \
	tab-utils.c \
	tab-utils.h \
	tmap.c \
	tmap.h
